@@ -1,3 +1,8 @@
+2007-05-20  Inge Wallin  <inge@lysator.liu.se>
+
+	Cleanup
+	* src/katlasviewpopupmenu.cpp (showLmbMenu): Clean
+
 2007-05-19  Inge Wallin  <inge@lysator.liu.se>
 
 	Cleanup
